--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,113 +8,149 @@
     android:background="@drawable/shape_border_yellow"
     tools:context=".AboutActivity">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/info_section"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toTopOf="@id/about_title_view"
-    app:layout_constraintStart_toStartOf="@id/about_title_view"
-    app:layout_constraintEnd_toEndOf="@id/button_back"
-    >
-
-    <TextView
-        android:id="@+id/info_title_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:padding="8dp"
-        android:text="@string/about_info_title"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <TextView
-        android:id="@+id/about_version"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:text="Version"
-        android:textColor="@color/circuit"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/info_title_view"
-        />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_wiki"
-        android:layout_width="128dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="24dp"
-        android:text="@string/link_wiki"
-        android:textColor="@color/white"
-        android:background="@drawable/hp_key"
-        android:onClick="wiki"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/info_text_view"
-        />
-
-    <TextView
-        android:id="@+id/info_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="0dp"
-        android:gravity="start"
-        android:maxEms="20"
-        android:paddingEnd="8dp"
-        android:paddingStart="0dp"
-        android:paddingBottom="8dp"
-        android:text="@string/about_info_text"
-        android:textAlignment="viewStart"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@id/button_wiki"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about_version"
-     />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-    <TextView
-        android:id="@+id/about_title_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:padding="8dp"
-        android:text="@string/about_title"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@id/about_text_view"
-        app:layout_constraintTop_toBottomOf="@id/info_section"
-        />
-
-    <TextView
-        android:id="@+id/about_text_view"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/contents_section"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="8dp"
-        android:gravity="start"
-        android:maxEms="20"
-        android:paddingEnd="8dp"
-        android:paddingStart="0dp"
-        android:paddingBottom="8dp"
-        android:scrollbars="vertical"
-        android:text="@string/about_license"
-        android:textAlignment="viewStart"
-        android:textColor="#939393"
-        app:layout_constraintBottom_toTopOf="@+id/button_back"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/button_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about_title_view"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@id/button_back"
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/info_section"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/licence_section"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            >
+
+            <TextView
+                android:id="@+id/info_title_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:padding="0dp"
+                android:text="@string/about_info_title"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/about_version"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:text="Version"
+                android:textColor="@color/circuit"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/info_title_view"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_wiki"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginBottom="24dp"
+                android:text="@string/link_wiki"
+                android:textColor="@color/white"
+                android:background="@drawable/hp_key"
+                android:onClick="wiki"
+                app:layout_constraintEnd_toEndOf="@id/button_releasenotes"
+                app:layout_constraintStart_toStartOf="@id/button_releasenotes"
+                app:layout_constraintTop_toTopOf="@id/about_version"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_releasenotes"
+                android:layout_width="144dp"
+                android:layout_height="48dp"
+                android:layout_marginBottom="24dp"
+                android:text="@string/button_releasenotes"
+                android:textColor="@color/white"
+                android:background="@drawable/hp_key"
+                android:onClick="releasenotes"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/button_wiki"
+                />
+
+            <TextView
+                android:id="@+id/info_text_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="0dp"
+                android:gravity="start"
+                android:maxEms="20"
+                android:paddingEnd="8dp"
+                android:paddingStart="0dp"
+                android:paddingBottom="8dp"
+                android:text="@string/about_info_text"
+                android:textAlignment="viewStart"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toStartOf="@id/button_wiki"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/about_version"
+             />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/licence_section"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/info_section"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            >
+
+            <TextView
+                android:id="@+id/about_title_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="0dp"
+                android:text="@string/about_title"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/about_text_view"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="8dp"
+                android:gravity="start"
+                android:maxEms="20"
+                android:paddingEnd="8dp"
+                android:paddingStart="0dp"
+                android:paddingBottom="8dp"
+                android:scrollbars="vertical"
+                android:text="@string/about_license"
+                android:textAlignment="viewStart"
+                android:textColor="#939393"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/about_title_view"
+                app:layout_constraintVertical_bias="0.0" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_back"
@@ -131,8 +167,8 @@
         android:id="@+id/deko"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
