--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -12,7 +12,7 @@
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/hp_key"
         android:clickable="true"
         android:focusable="true"
@@ -29,7 +29,7 @@
         android:id="@+id/selectLevelButton"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/hp_key"
         android:clickable="true"
         android:focusable="true"
@@ -46,7 +46,7 @@
         android:id="@+id/startNewGameButton"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/hp_key"
         android:clickable="true"
         android:focusable="true"
@@ -63,12 +63,29 @@
         android:id="@+id/settingsButton"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/hp_key"
         android:clickable="true"
         android:focusable="true"
         android:onClick="displaySettingsDialog"
         android:text="@string/settings_title"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/quitButton"
+        app:layout_constraintEnd_toEndOf="@+id/continueGameButton"
+        app:layout_constraintStart_toStartOf="@+id/continueGameButton"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/quitButton"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/hp_key_quit"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="exitActivity"
+        android:text="@string/quit"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -132,9 +149,8 @@
         app:layout_constraintBottom_toTopOf="@+id/continueGameButton"
         app:layout_constraintEnd_toEndOf="@+id/continueGameButton"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8"
+        app:layout_constraintVertical_bias="0.6"
         app:srcCompat="@drawable/mask"
         tools:ignore="SpeakableTextPresentCheck" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
