--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,7 +46,8 @@
     <color name="chips_split_glow">#FFA557</color>
     <color name="chips_soldstate_foreground">#707070</color>
     <color name="chips_soldstate_glow">#CFCFCF</color>
-    <color name="chips_background">#FF000000</color>
+    <color name="chips_background">#FF202020</color>
+    <color name="resistor_background">#303030</color>
 
     <color name="scoreboard_text">#FFFFFF</color>
     <color name="led_red">#FF5640</color>
