--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -76,7 +76,7 @@
                 android:text="@string/button_releasenotes"
                 android:textColor="@color/white"
                 android:background="@drawable/hp_key"
-                android:onClick="releasenotes"
+                android:onClick="releaseNotes"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/button_wiki"
                 />
