--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -74,13 +74,13 @@
     <color name="upgrade_inactive">#7C878C</color>
     <color name="upgrade_monochrome">#B9921C</color>
     <color name="upgrade_active_general">#79D5FF</color>
-    <color name="upgrade_active_eco">#FF8400</color>
+    <color name="upgrade_active_eco">#FF6F00</color>
     <color name="upgrade_active_meta">#FF3138</color>
     <color name="upgrade_active_chip_sub">#07DD00</color>
     <color name="upgrade_active_chip_shr">#649DF3</color>
     <color name="upgrade_active_chip_acc">#FFC107</color>
     <color name="upgrade_active_chip_mem">#774CC3</color>
-    <color name="upgrade_active_chip_clk">#FF973B</color>
+    <color name="upgrade_active_chip_clk">#F19C50</color>
     <color name="upgrade_active_chip_res">#F0F0F0</color>
     <color name="resistor_0">#000000</color>
     <color name="resistor_1">#964b00</color>
