"quit level" dialog now freezes the game

--- a/app/src/main/res/layout/layout_dialog_replay.xml
+++ b/app/src/main/res/layout/layout_dialog_replay.xml
@@ -12,12 +12,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/replay_dialog_button_margin"
         android:layout_marginEnd="16dp"
         android:fontFamily="monospace"
         android:text="@string/query_quit"
         android:textColor="@color/text_lightamber"
-        android:textSize="18sp"
+        android:textSize="@dimen/replay_dialog_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,16 +27,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginTop="@dimen/replay_dialog_button_margin"
+        android:layout_marginBottom="@dimen/replay_dialog_button_margin"
         android:background="@color/black"
         android:backgroundTint="@color/black"
         android:backgroundTintMode="src_over"
         android:fontFamily="monospace"
-        android:text="@string/return_to_main_menu"
+        android:text="@string/button_return_to_main_menu"
         android:textAllCaps="true"
         android:textColor="@color/text_green"
-        android:textSize="18sp"
+        android:textSize="@dimen/replay_dialog_text_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintBottom_toTopOf="@id/button_replay" />
@@ -47,10 +47,25 @@
         android:layout_height="wrap_content"
         android:background="@color/black"
         android:fontFamily="monospace"
-        android:text="@string/replay"
+        android:text="@string/buttton_replay"
         android:textAllCaps="true"
         android:textColor="@color/text_lightgreen"
-        android:textSize="18sp"
+        android:textSize="@dimen/replay_dialog_text_size"
+        android:layout_marginTop="@dimen/replay_dialog_button_margin"
+        android:layout_marginBottom="@dimen/replay_dialog_button_margin"
+        app:layout_constraintStart_toStartOf="@+id/button_return"
+        app:layout_constraintBottom_toTopOf="@+id/button_cancel" />
+
+    <Button
+        android:id="@+id/button_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:fontFamily="monospace"
+        android:text="@string/continue_game"
+        android:textAllCaps="true"
+        android:textColor="@color/text_gray"
+        android:textSize="@dimen/replay_dialog_text_size"
         android:layout_marginBottom="16dp"
         app:layout_constraintStart_toStartOf="@+id/button_return"
         app:layout_constraintBottom_toBottomOf="parent" />
