--- a/app/src/main/res/layout/layout_dialog_purchaselife.xml
+++ b/app/src/main/res/layout/layout_dialog_purchaselife.xml
@@ -15,59 +15,66 @@
         android:layout_marginTop="@dimen/dialog_button_margin_vertical"
         android:layout_marginEnd="16dp"
         android:fontFamily="sans-serif"
-        android:text="@string/query_quit"
-        android:textColor="@color/text_lightamber"
+        android:text="@string/query_purchase_life"
+        android:textColor="@color/text_lightred"
         android:textSize="@dimen/dialog_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <TextView
+        android:id="@+id/textViewAnnotation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="@dimen/dialog_button_margin_vertical"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="sans-serif"
+        android:text="@string/annotation_purchase_life"
+        android:textColor="@color/text_lightred"
+        android:textSize="@dimen/dialog_annotation_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
     <Button
-        android:id="@+id/button_return"
+        android:id="@+id/button_yes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="@dimen/dialog_button_margin_vertical"
         android:layout_marginBottom="@dimen/dialog_button_margin_vertical"
+        android:layout_marginStart="@dimen/dialog_button_margin_horizontal"
+        android:layout_marginEnd="@dimen/dialog_button_margin_horizontal"
         android:background="@color/black"
         android:backgroundTint="@color/black"
         android:backgroundTintMode="src_over"
-        android:fontFamily="sans-serif"
-        android:text="@string/button_return_to_main_menu"
+        android:fontFamily="monospace"
+        android:text="@string/yes"
         android:textAllCaps="true"
-        android:textColor="@color/text_green"
+        android:textColor="@color/text_lightred"
         android:textSize="@dimen/dialog_text_size"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintBottom_toTopOf="@id/button_replay" />
+        app:layout_constraintTop_toBottomOf="@id/textViewAnnotation"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <Button
-        android:id="@+id/button_replay"
+        android:id="@+id/button_no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:fontFamily="sans-serif"
-        android:text="@string/buttton_replay"
-        android:textAllCaps="true"
-        android:textColor="@color/text_lightgreen"
-        android:textSize="@dimen/dialog_text_size"
         android:layout_marginTop="@dimen/dialog_button_margin_vertical"
         android:layout_marginBottom="@dimen/dialog_button_margin_vertical"
-        app:layout_constraintStart_toStartOf="@+id/button_return"
-        app:layout_constraintBottom_toTopOf="@+id/button_cancel" />
-
-    <Button
-        android:id="@+id/button_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dialog_button_margin_horizontal"
+        android:layout_marginEnd="@dimen/dialog_button_margin_horizontal"
         android:background="@color/black"
-        android:fontFamily="sans-serif"
-        android:text="@string/continue_game"
+        android:fontFamily="monospace"
+        android:text="@string/no"
         android:textAllCaps="true"
-        android:textColor="@color/text_gray"
+        android:textColor="@color/text_red"
         android:textSize="@dimen/dialog_text_size"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintStart_toStartOf="@+id/button_return"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/button_yes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button_yes" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
