--- a/app/src/main/res/layout/layout_dialog_new_game.xml
+++ b/app/src/main/res/layout/layout_dialog_new_game.xml
@@ -40,6 +40,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
             android:text="Question"
+            android:textSize="@dimen/dialog_text_size"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -48,31 +49,36 @@
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="@dimen/dialog_text_size"
             android:background="@color/black"
             android:text="Answer 1"
             android:textAllCaps="true"
             android:textColor="@color/circuit_edge"
             app:backgroundTint="@null"
+            app:layout_constraintTop_toBottomOf="@id/question"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/question" />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="0dp"
             android:background="@color/black"
             android:text="Answer 2"
+            android:textSize="@dimen/dialog_text_size"
             android:textAllCaps="true"
             android:textColor="@color/circuit"
-            android:textSize="12sp"
             app:backgroundTint="@null"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/button1"
-            app:layout_constraintStart_toStartOf="@+id/button1"
-            app:layout_constraintTop_toBottomOf="@id/button1" />
+            app:layout_constraintEnd_toStartOf="@id/button1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/button1"
+            app:layout_constraintBottom_toBottomOf="@id/button1"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
